@@ -1,2 +1,39 @@
 # E-Learning-Platform
 A full-stack e-learning platform scaffold with admin/instructor/student roles, basic auth, course management, payments hooks, and CI/Docker setup.
+# E-Learning Platform (JavaFX)
+
+A simple **JavaFX-based E-Learning Platform** that supports three main user roles:
+
+### 👑 Admin
+- Manage users (add, update, delete instructor, student, and admin accounts)
+- Manage course content, pricing, and schedules
+- Track enrollments, payments, and completion rates
+- Generate reports on student progress and course performance
+
+### 👨‍🏫 Instructor
+- Create and manage courses, assignments, and exams
+- Track student progress and provide feedback
+- Manage personal profile and availability
+
+### 🎓 Student
+- Enroll in courses and track learning progress
+- Complete assignments and view grades
+- Make payments for courses and manage subscriptions
+
+### 🛠️ How to Run
+1. Make sure you have **JavaFX SDK** installed.
+2. Compile and run using:
+   ```bash
+   javac ELearningPlatform.java
+   java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls ELearningPlatform
+   ```
+
+### 📂 Structure
+```
+e-learning-platform/
+├── ELearningPlatform.java
+└── README.md
+```
+
+---
+© 2025 E-Learning Platform Demo
